--- a/Dia 02 a 03 - Portifolio/index.html
+++ b/Dia 02 a 03 - Portifolio/index.html
@@ -12,7 +12,7 @@
         <section class="left-section">
             <section class="left-section-content">
                 <div class="profile">
-                    <img src="" alt="" class="profile-image">
+                    <img src="MYICON.png" alt="" class="profile-image">
                     <p class="name">Paula Alves</p>
                     <p class="profession">Back-end </p>
 
@@ -46,6 +46,22 @@
                         </p>
                     </section>
                 </div>
+                <section class="experience gap">
+                    <div class="right-title">Experiencia</div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="ex-company-name">NOME DA EMPRESA</p>
+                            <p class="exp-time-period">PERIODO TRABALHADO</p>
+                        </div>
+                        <div class="exp-right">
+                            <div class="position">CARGO/FUNÇÃO</div>
+                            <div class="exp-desc"> Principais Atividades</div>
+                        </div>
+
+                    </div>
+                    
+                </section>
+
             </section>
         
     </main>
